--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body{
   /* background-color: black;
   color: white; */
@@ -5,8 +10,18 @@ body{
 
 .left{
   width: 25vw;
+  padding: 10px;
 }
 
 .right{
   width: 75vw;
+}
+
+
+.home ul li{
+  display: flex;
+  width: 14px;
+  gap: 15px;
+  list-style: none;
+  padding-top: 14px;
 }
