--- a/utility.css
+++ b/utility.css
@@ -14,3 +14,27 @@
 .items-center{
   align-items: center;
 }
+
+.bg-black{
+  background-color: black;
+  color: white;
+}
+
+.bg-grey{
+  background-color: #121212;
+}
+
+.invert{
+  filter: invert(1);
+}
+.m1{
+  margin: 5px;
+}
+
+.rounded{
+  border-radius: 7px;
+}
+
+.p1{
+  padding: 10px;
+}
