--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 
 body{
-  /* background-color: black;
-  color: white; */
+  background-color: black;
+  color: white;
 }
 
 .left{
@@ -15,7 +15,9 @@ body{
 
 .right{
   width: 75vw;
+
 }
+
 
 
 .home ul li{
@@ -24,4 +26,31 @@ body{
   gap: 15px;
   list-style: none;
   padding-top: 14px;
+  font-weight: bold;
+}
+
+.heading{
+  display: flex;
+  width: 100%;
+  gap: 15px;
+  padding-top: 14px;
+  font-weight: bold;
+}
+
+.heading img{
+  width: 30px;
+}
+
+.library{
+  min-height: 70vh;
+  position: relative;
+}
+
+.footer{
+  display: flex;
+  font-size: 10px;
+  color: gray;
+  gap: 13px;
+  position: absolute;
+  bottom: 0;
 }
