--- a/style.css
+++ b/style.css
@@ -83,6 +83,8 @@ body{
   padding: 10px;
   border-radius: 5px;
   background-color: #252525;
+  position: relative;
+  overflow: hidden;
 }
 
 .card > *{
@@ -91,5 +93,19 @@ body{
 
 .card img{
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.card .play{
+  position: absolute;
+  top: 200px;
+  right: 17px;
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+}
+.card:hover .play{
+  opacity: 1;
+  top: 160px;
 }
