--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body{
 
 .right{
   width: 75vw;
+  position: relative;
 
 }
 
@@ -114,3 +115,44 @@ body{
 
 }
 
+.buttons > * {
+  margin: 0 12px;
+}
+
+.signupbtn{
+  background-color: rgb(34,34,34);
+  color: rgb(156, 148, 148);
+  font-weight: bold;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.signupbtn:hover{
+  font-size: 17px;
+  color: white;
+}
+
+.loginbtn{
+  background-color: white;
+  border-radius: 21px;
+  color: black;
+  padding: 10px;
+  width: 79px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.loginbtn:hover{
+  font-weight: bold;
+  font-size: 17px;
+}
+
+.playbar{
+  position: absolute;
+  bottom: 0;
+  background-color: rgb(109, 194, 109);
+  width: 100%;
+  padding: 12px;
+}
