--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ body{
   cursor: pointer;
   padding: 12px 0;
   border: 1px solid white;
-  margin: 5px;
+  margin: 5px 0;
   padding: 5px;
   border-radius: 5px;
 }
