--- a/style.css
+++ b/style.css
@@ -165,12 +165,15 @@ align-items: center;
 }
 
 .playbar{
-  position: absolute;
-  bottom: 0;
-  background-color: rgb(198, 205, 198);
+  position: fixed;
+  bottom: 16px;
+  filter: invert(1);
+  background: #dad5d5;
+  border-radius: 18px;
   width: 90%;
   padding: 12px;
   width: 70vw;
+  height: 40px;
 }
 
 .songbuttons{
@@ -230,4 +233,25 @@ align-items: center;
 
 .songList::-webkit-scrollbar-thumb:hover {
   background: #666;
+}
+
+.seekbar{
+  position: absolute;
+  height: 2px;
+  width: 98%;
+  background: black;
+  border-radius: 10px;
+  bottom: 0;
+  margin: 6px;
+}
+
+.circle{
+  width: 13px;
+  height: 13px;
+  border-radius: 13px;
+  background-color: black;
+  position: relative;
+  bottom: 6px;
+  left: 0;
+  transition: left 3s;
 }
