make a playbar interactive add play and pause functionality in playbar and also create duration of song section in playbar and make the seekbar for song

--- a/style.css
+++ b/style.css
@@ -255,3 +255,18 @@ align-items: center;
   left: 0;
   transition: left 3s;
 }
+
+.songbuttons img{
+  cursor: pointer;
+  
+}
+
+
+.songinfo , .songtime{
+  color: black;
+  padding: 0 12px;
+}
+.abovebar{
+  display: flex;
+  justify-content:space-between ;
+}
