Building a hamburger functionality for mobile devices.

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ align-items: center;
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 60vh;
 }
 
@@ -222,6 +222,17 @@ align-items: center;
   padding-right: 8px; /* space for scrollbar */
 }
 
+.hamburger{
+  display: none;
+}
+
+.hamburgerContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 14px;
+}
+
 .songList::-webkit-scrollbar {
   width: 6px;
 }
@@ -270,4 +281,43 @@ align-items: center;
 .abovebar{
   display: flex;
   justify-content:space-between ;
+}
+
+.close{
+  display: none;
+}
+
+@media (max-width: 1200px){
+  .left{
+    position: absolute;
+    left: -120%;
+    transition: all .3s;
+    z-index: 1;
+    width: 373px;
+    background-color: black;
+  }
+
+  .left .close{
+    position: absolute;
+    right: 31px;
+    top: 25px;
+    width: 29px;
+    display: block;
+    cursor: pointer;
+  }
+
+  .right{
+    width: 100vw;
+  }
+
+  .playbar{
+    width: 95vw;
+  }
+
+  .hamburger{
+    display: block;
+    cursor: pointer;
+  }
+
+  
 }
